--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,12 +37,11 @@ a {
   font-weight: bolder;
 }
 
-/* #333333 */
-
 .header__nav {
   display: block;
+  width: 100%;
   margin: 0;
-  padding: 5px;
+  padding: 10px;
   background-color: #333333;
   color: white;
 }
@@ -72,6 +71,39 @@ a {
 
 .layout__slider {
   grid-area: slider;
+  position: relative;
+  width: 100%;
+  height: 40rem;
+  border: 5px solid whitesmoke;
+  box-shadow: 0px 0px 5px black;
+  background-color: aquamarine;
+  overflow: hidden;
+}
+
+.slider__btn {
+  position: absolute;
+  top: calc(50% - 2.5rem);
+  width: 5rem;
+  height: 5rem;
+  z-index: 2;
+  background-color: black;
+  color: white;
+  font-size: 2.5rem;
+  cursor: pointer;
+  border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
+}
+
+.slider__btn-prev {
+  left: 1rem;
+}
+
+.slider__btn-next {
+  left: auto;
+  right: 1rem;
 }
 
 .layout__article {
