--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,13 +193,83 @@ a {
   -o-transform: scale(0.9);
 }
 
+/* ESTILOS WIDGETS */
+
 .widget {
   grid-area: aside;
 }
 
+.widget__content {
+  margin-bottom: 2.5rem;
+}
+
+.widget__title {
+  margin-bottom: 1.5rem;
+  text-align: center;
+  text-transform: capitalize;
+  background-image: url("../img/lines.png");
+  background-repeat: repeat-x;
+  line-height: 0.5rem;
+}
+
+.title__span {
+  padding: 5px;
+  background-color: white;
+}
+
+.widget__content img {
+  width: 100%;
+}
+
+.widget__form {
+  display: grid;
+  grid-template-columns: [label]auto [input]1fr;
+  grid-auto-flow: row;
+  grid-gap: 5px;
+}
+
+.widget__form > label {
+  grid-column: label;
+  grid-row: auto;
+}
+
+.widget__form > input {
+  padding: 5px;
+  grid-column: input;
+  grid-row: auto;
+  border: none;
+  outline: none;
+  box-shadow: 0px 0px 3px black;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+}
+
+.widget__form > input[type="submit"] {
+  background-color: #1e87c8;
+  color: white;
+  transition: all 300ms;
+  -webkit-transition: all 300ms;
+  -moz-transition: all 300ms;
+  -ms-transition: all 300ms;
+  -o-transition: all 300ms;
+}
+
+.widget__form > input[type="submit"]:active {
+  transform: scale(0.99);
+  -webkit-transform: scale(0.99);
+  -moz-transform: scale(0.99);
+  -ms-transform: scale(0.99);
+  -o-transform: scale(0.99);
+}
+
 .footer {
   display: block;
+  height: 3rem;
   margin: 0px auto;
+  padding: 1px;
   width: 80%;
   background-color: #41485093;
   color: white;
