--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,11 +37,63 @@ a {
 
 .layout__header {
   grid-area: header;
+  position: relative;
 }
 
 .header__title {
   text-transform: uppercase;
   font-weight: bolder;
+}
+
+.header__btn {
+  display: none;
+  flex-direction: column;
+  width: 3rem;
+  height: 3rem;
+  border: 0;
+  background: transparent;
+  gap: 0.65rem;
+  position: absolute;
+  top: 0.6rem;
+  left: auto;
+  right: 1rem;
+}
+
+.header__btn > div {
+  background: black;
+  height: 2px;
+  width: 100%;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transform-origin: left;
+}
+
+.header__btn:hover div:first-child {
+  transform: rotate(35deg);
+  -webkit-transform: rotate(35deg);
+  -moz-transform: rotate(35deg);
+  -ms-transform: rotate(35deg);
+  -o-transform: rotate(35deg);
+}
+
+.header__btn:hover div:nth-child(2) {
+  opacity: 0;
+}
+
+.header__btn:hover div:last-child {
+  transform: rotate(-35deg);
+  -webkit-transform: rotate(-35deg);
+  -moz-transform: rotate(-35deg);
+  -ms-transform: rotate(-35deg);
+  -o-transform: rotate(-35deg);
 }
 
 .header__nav {
