--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,7 +137,6 @@ a {
   height: 40rem;
   border: 5px solid whitesmoke;
   box-shadow: 0px 0px 5px black;
-  background-color: aquamarine;
   overflow: hidden;
 }
 
@@ -181,8 +180,19 @@ a {
   right: 1rem;
 }
 
+.slider__content {
+  position: relative;
+}
+
 .slider__img {
+  position: absolute;
+  width: 100%;
   opacity: 0;
+  transition: all 1.5s;
+  -webkit-transition: all 1.5s;
+  -moz-transition: all 1.5s;
+  -ms-transition: all 1.5s;
+  -o-transition: all 1.5s;
 }
 
 .slider__img--active {
