--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -327,6 +327,71 @@ a {
   -o-transform: scale(0.99);
 }
 
+/* ESTILOS ACORDEÓN */
+
+.accordion {
+  width: 100%;
+  max-width: 60rem;
+}
+
+.accordion input[type="checkbox"] {
+  display: none;
+}
+
+.accordion li {
+  list-style: none;
+  width: 100%;
+  padding: 0.5rem;
+}
+
+.accordion li label {
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+  line-height: 3rem;
+  padding: 2rem;
+  margin-bottom: 0.2rem;
+  font-weight: bolder;
+  cursor: pointer;
+  position: relative;
+  background-color: #1e87c8;
+  color: white;
+}
+
+.accordion li label::after {
+  content: "+";
+  position: absolute;
+  left: auto;
+  right: 1rem;
+  font-size: 3rem;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+
+.accordion .accordion__content {
+  background-color: white;
+  padding: 0 1.5rem;
+  height: 0;
+  overflow: hidden;
+  border: none;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+
+.accordion input[type="checkbox"]:checked ~ ::after {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -ms-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+}
+
 .footer {
   display: block;
   height: 3rem;
