ajustes estilos css acordion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,8 +338,9 @@ a {
   padding: 1rem;
   display: flex;
   flex-flow: row nowrap;
+  justify-content: space-between;
   align-items: center;
-  position: relative;
+  font-size: 1.2rem;
   background-color: #1e87c8;
   box-shadow: 0px 0px 10px #0077b2 inset;
   border-bottom: 5px solid black;
@@ -348,7 +349,6 @@ a {
 }
 
 .faq .faq__head .faq__head__icon {
-  position: absolute;
   left: auto;
   right: 2rem;
   transition: all 0.5s ease-in-out;
