--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,16 @@
 /* ESTILOS GENERALES */
 
+:root {
+  --primary-color: #1e87c8;
+}
+
 html {
   font-size: 62.5%;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
 }
 
 body {
@@ -43,6 +52,10 @@ a {
 .header__title {
   text-transform: uppercase;
   font-weight: bolder;
+  max-width: 25rem;
+  background-color: var(--primary-color);
+  margin-bottom: 1.5rem;
+  padding: 0.5rem;
 }
 
 .header__btn {
@@ -236,7 +249,7 @@ a {
   height: 4rem;
   text-transform: capitalize;
   border: none;
-  background-color: #1e87c8;
+  background-color: var(--primary-color);
   color: white;
   box-shadow: 0px 0px 3px black;
   cursor: pointer;
@@ -310,7 +323,7 @@ a {
 }
 
 .widget__form > input[type="submit"] {
-  background-color: #1e87c8;
+  background-color: var(--primary-color);
   color: white;
   transition: all 300ms;
   -webkit-transition: all 300ms;
@@ -341,8 +354,7 @@ a {
   justify-content: space-between;
   align-items: center;
   font-size: 1.2rem;
-  background-color: #1e87c8;
-  box-shadow: 0px 0px 10px #0077b2 inset;
+  background-color: var(--primary-color);
   border-bottom: 5px solid black;
   color: white;
   cursor: pointer;
@@ -400,7 +412,7 @@ a {
   display: flex;
   justify-content: center;
   font-size: 7rem;
-  color: #1e87c8;
+  color: var(--primary-color);
 }
 
 .marco_reloj > span {
@@ -420,8 +432,8 @@ a {
 .horas,
 .minutos,
 .segundos {
-  text-shadow: 0px 0px 0.5px aquamarine, 0px 0px 1px aquamarine,
-    0px 0px 1.5px aquamarine;
+  text-shadow: 0px 0px 0.5px var(--primary-color),
+    0px 0px 1px var(--primary-color), 0px 0px 1.5px var(--primary-color);
 }
 
 .dias_semana {
@@ -436,7 +448,7 @@ a {
 
 .dia--active {
   opacity: 1;
-  color: #1e87c8;
+  color: var(--primary-color);
 }
 
 .reloj_fecha {
@@ -450,7 +462,7 @@ a {
 
 .main__contact {
   margin: 0 auto;
-  padding: 1rem;
+  padding: 2rem;
   display: grid;
   grid-template-columns: repeat(2, auto);
 }
@@ -497,7 +509,7 @@ a {
   grid-column: span 2;
   width: 100%;
   height: 4rem;
-  background-color: #1e87c8;
+  background-color: var(--primary-color);
   color: white;
   border: none;
   box-shadow: 0px 0px 3px black;
@@ -524,6 +536,118 @@ a {
 
 .just-validate-error-label {
   font-style: italic;
+}
+
+/* ESTILOS CAMBIADOR TEMAS */
+
+.themes {
+  width: 5rem;
+  height: 12rem;
+  position: fixed;
+  left: 0;
+  right: auto;
+  top: 45%;
+  padding: 0.5rem 1rem;
+  background-color: #333;
+  opacity: 0.8;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.themes > div {
+  width: 100%;
+  height: 3rem;
+  border: 1px solid white;
+  cursor: pointer;
+}
+
+.themes > div:first-child {
+  background-color: green;
+  transition: all 300ms;
+  -webkit-transition: all 300ms;
+  -moz-transition: all 300ms;
+  -ms-transition: all 300ms;
+  -o-transition: all 300ms;
+}
+
+.themes > div:first-child:hover {
+  box-shadow: 0px 0px 5px white;
+}
+
+.themes > div:first-child:active {
+  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  -o-transform: scale(0.9);
+}
+
+.themes > div:nth-child(2) {
+  background-color: orangered;
+  transition: all 300ms;
+  -webkit-transition: all 300ms;
+  -moz-transition: all 300ms;
+  -ms-transition: all 300ms;
+  -o-transition: all 300ms;
+}
+
+.themes > div:nth-child(2):active {
+  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  -o-transform: scale(0.9);
+}
+
+.themes > div:nth-child(2):hover {
+  box-shadow: 0px 0px 5px white;
+}
+
+.themes > div:last-child {
+  background-color: #1e87c8;
+  transition: all 300ms;
+  -webkit-transition: all 300ms;
+  -moz-transition: all 300ms;
+  -ms-transition: all 300ms;
+  -o-transition: all 300ms;
+}
+
+.themes > div:last-child:active {
+  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  -o-transform: scale(0.9);
+}
+
+.themes > div:last-child:hover {
+  box-shadow: 0px 0px 5px white;
+}
+
+.theme__green--active {
+  --primary-color: green;
+}
+
+.theme__orange--active {
+  --primary-color: #ff4500;
+}
+
+.theme__blue--active {
+  --primary-color: #1e87c8;
+}
+
+.theme__green--active > body {
+  background-image: url(../img/hojas.jpg);
+}
+
+.theme__orange--active > body {
+  background-image: url(../img/rojo.jpg);
+}
+
+.theme__blue--active > body {
+  background-image: url(../img/cielo.jpg);
 }
 
 /*ESTILOS FOOTER*/
